[gd_scene load_steps=16 format=3 uid="uid://d1l7tugfm7gbh"]

[ext_resource type="Script" uid="uid://dyavyrdbbbbv5" path="res://scripts/main.gd" id="1_wetln"]
[ext_resource type="Resource" uid="uid://dye62h1o6qfct" path="res://assets/dialogues.tres" id="2_ooohs"]
[ext_resource type="Texture2D" uid="uid://41ytxdrxq0lo" path="res://assets/Screens/Fond.png" id="3_pnrra"]
[ext_resource type="PackedScene" uid="uid://cbf2iy84v21yy" path="res://scenes/ball.tscn" id="4_yoi1k"]
[ext_resource type="PackedScene" uid="uid://cfdgabkuqey76" path="res://scenes/juggler.tscn" id="5_5xwn4"]
[ext_resource type="PackedScene" uid="uid://bvdra1l0m5w65" path="res://scenes/player.tscn" id="6_3i82n"]
[ext_resource type="PackedScene" uid="uid://c6j3xb70lm2la" path="res://scenes/public.tscn" id="7_3mf5k"]
[ext_resource type="Theme" uid="uid://ctkm3s4cu0nht" path="res://assets/themes/dialogue_theme.tres" id="8_r2ue6"]
[ext_resource type="Texture2D" uid="uid://dr5mnvjloc2pg" path="res://assets/Placeholders/public_bubble_placeholder_2.png" id="9_l1g8i"]
[ext_resource type="Script" uid="uid://cyqwtdc8sjg4g" path="res://scripts/public_bubble_1.gd" id="10_8qpon"]
[ext_resource type="AudioStream" uid="uid://cnlc3odhnmo2b" path="res://assets/sound/minijama182-2.wav" id="11_fu4xf"]
[ext_resource type="AudioStream" uid="uid://b7gg83spp7jsi" path="res://assets/sound/crowd-cheer-in-school-auditorium-driken5482.mp3" id="12_kjxej"]
[ext_resource type="AudioStream" uid="uid://bx7sty7uslfl5" path="res://assets/sound/crowd-shocked-reaction-universfield.mp3" id="13_2oxi0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jyhfs"]
size = Vector2(1160, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tbgi4"]
size = Vector2(179, 537)

[node name="level0" type="Node2D"]
script = ExtResource("1_wetln")
dialogue = ExtResource("2_ooohs")

[node name="Fond" type="Sprite2D" parent="."]
position = Vector2(576.5, 324)
scale = Vector2(0.53287, 0.4)
texture = ExtResource("3_pnrra")

[node name="Ball" parent="." instance=ExtResource("4_yoi1k")]
position = Vector2(266, 361)

[node name="juggler_body" parent="." instance=ExtResource("5_5xwn4")]
position = Vector2(564, 400)
scale = Vector2(0.4, 0.4)
motion_mode = 1

[node name="player_body" parent="." instance=ExtResource("6_3i82n")]
z_index = 2
position = Vector2(231, 385)

[node name="down_boundary" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="down_boundary"]
position = Vector2(574, 434)
shape = SubResource("RectangleShape2D_jyhfs")

[node name="right_boundary" type="RigidBody2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_boundary"]
position = Vector2(1046.5, 333)
shape = SubResource("RectangleShape2D_tbgi4")

[node name="Node2D" parent="." instance=ExtResource("7_3mf5k")]

[node name="public_bubble_1" type="TextureRect" parent="."]
offset_top = 477.0
offset_right = 274.0
offset_bottom = 691.0
theme = ExtResource("8_r2ue6")
texture = ExtResource("9_l1g8i")
script = ExtResource("10_8qpon")
metadata/_edit_use_anchors_ = true

[node name="publicbubble1text" type="RichTextLabel" parent="public_bubble_1"]
layout_mode = 0
offset_left = 76.0
offset_top = 62.0
offset_right = 229.0
offset_bottom = 120.0
theme = ExtResource("8_r2ue6")
text = "This is so great !"
metadata/_edit_use_anchors_ = true

[node name="public_bubble_1_timer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[node name="bg music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_fu4xf")
volume_db = -10.341
autoplay = true

[node name="ballreceived" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_kjxej")

[node name="ballmissed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_2oxi0")

[connection signal="ball_caught" from="juggler_body" to="." method="_on_juggler_body_ball_caught"]
[connection signal="throw_ball" from="player_body" to="." method="_on_player_body_throw_ball"]
[connection signal="body_entered" from="down_boundary" to="." method="_on_down_boundary_body_entered"]
[connection signal="timeout" from="public_bubble_1_timer" to="." method="_on_public_bubble_1_timer_timeout"]
